jclass/snapshots/vm-exceptions-java_assert-JavaAssertShouldThrowErrMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class exceptions.java_assert.JavaAssertShouldThrowErrMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #8                       //exceptions/java_assert/JavaAssertShouldThrowErrMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 3, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // exceptions/java_assert/JavaAssertShouldThrowErrMain.$assertionsDisabled:Z
   #8 = Class              #10              // exceptions/java_assert/JavaAssertShouldThrowErrMain
   #9 = NameAndType        #11:#12          // $assertionsDisabled:Z
  #10 = Utf8               exceptions/java_assert/JavaAssertShouldThrowErrMain
  #11 = Utf8               $assertionsDisabled
  #12 = Utf8               Z
  #13 = Class              #14              // java/lang/AssertionError
  #14 = Utf8               java/lang/AssertionError
  #15 = String             #16              // Error message
  #16 = Utf8               Error message
  #17 = Methodref          #13.#18          // java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
  #18 = NameAndType        #5:#19           // "<init>":(Ljava/lang/Object;)V
  #19 = Utf8               (Ljava/lang/Object;)V
  #20 = Methodref          #21.#22          // java/lang/Class.desiredAssertionStatus:()Z
  #21 = Class              #23              // java/lang/Class
  #22 = NameAndType        #24:#25          // desiredAssertionStatus:()Z
  #23 = Utf8               java/lang/Class
  #24 = Utf8               desiredAssertionStatus
  #25 = Utf8               ()Z
  #26 = Utf8               Code
  #27 = Utf8               LineNumberTable
  #28 = Utf8               LocalVariableTable
  #29 = Utf8               this
  #30 = Utf8               Lexceptions/java_assert/JavaAssertShouldThrowErrMain;
  #31 = Utf8               main
  #32 = Utf8               ([Ljava/lang/String;)V
  #33 = Utf8               args
  #34 = Utf8               [Ljava/lang/String;
  #35 = Utf8               StackMapTable
  #36 = Utf8               <clinit>
  #37 = Utf8               SourceFile
  #38 = Utf8               JavaAssertShouldThrowErrMain.java
{
  static final boolean $assertionsDisabled;
    descriptor: Z
    flags: (0x1018) ACC_STATIC, ACC_FINAL, ACC_SYNTHETIC
  
  public exceptions.java_assert.JavaAssertShouldThrowErrMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lexceptions/java_assert/JavaAssertShouldThrowErrMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=1, args_size=1
         0: getstatic     #7                  // Field $assertionsDisabled:Z
         3: ifne          16                
         6: new           #13                 // class java/lang/AssertionError
         9: dup                     
        10: ldc           #15                 // String Error message
        12: invokespecial #17                 // Method java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
        15: athrow                  
        16: return                  
      LineNumberTable:
        line 5: 0
        line 6: 16
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       17     0  args   [Ljava/lang/String;
      StackMapTable: number_of_entries = 1
        frame_type = 16 /* same */
  
  static {};
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=1, locals=0, args_size=0
         0: ldc           #8                  // class exceptions/java_assert/JavaAssertShouldThrowErrMain
         2: invokevirtual #20                 // Method java/lang/Class.desiredAssertionStatus:()Z
         5: ifne          12                
         8: iconst_1                
         9: goto          13                
        12: iconst_0                
        13: putstatic     #7                  // Field $assertionsDisabled:Z
        16: return                  
      LineNumberTable:
        line 3: 0
      StackMapTable: number_of_entries = 2
        frame_type = 12 /* same */
        frame_type = 64 /* same_locals_1_stack_item */
          stack = [ int ]
}
SourceFile: "JavaAssertShouldThrowErrMain.java"
