jclass/snapshots/vm-exceptions-java_assert_should_not_fail-JavaAssertNotMatchedOkMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class exceptions.java_assert_should_not_fail.JavaAssertNotMatchedOkMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #7                       //exceptions/java_assert_should_not_fail/JavaAssertNotMatchedOkMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // exceptions/java_assert_should_not_fail/JavaAssertNotMatchedOkMain
   #8 = Utf8               exceptions/java_assert_should_not_fail/JavaAssertNotMatchedOkMain
   #9 = Utf8               Code
  #10 = Utf8               LineNumberTable
  #11 = Utf8               LocalVariableTable
  #12 = Utf8               this
  #13 = Utf8               Lexceptions/java_assert_should_not_fail/JavaAssertNotMatchedOkMain;
  #14 = Utf8               main
  #15 = Utf8               ([Ljava/lang/String;)V
  #16 = Utf8               args
  #17 = Utf8               [Ljava/lang/String;
  #18 = Utf8               SourceFile
  #19 = Utf8               JavaAssertNotMatchedOkMain.java
{
  public exceptions.java_assert_should_not_fail.JavaAssertNotMatchedOkMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lexceptions/java_assert_should_not_fail/JavaAssertNotMatchedOkMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=0, locals=1, args_size=1
         0: return                  
      LineNumberTable:
        line 6: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        1     0  args   [Ljava/lang/String;
}
SourceFile: "JavaAssertNotMatchedOkMain.java"
